feat: add echo_server to cmake config

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,7 @@ project(pse_2024 C)
 set(CMAKE_C_STANDARD 11)
 
 add_executable(pse_2024 lib/http-lib/httplib.c main.c)
+add_executable(echo_server lib/http-lib/httplib.c echo_server.c)
 
 set_target_properties(pse_2024 PROPERTIES SUFFIX ".out")
+set_target_properties(echo_server PROPERTIES SUFFIX ".out")
