--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,4 +3,7 @@ project(pse_2024_tests C)
 
 set(CMAKE_C_STANDARD 11)
 
-#add_executable(pse_2024_tests)
+add_executable(pse_2024_tests
+        lib/http-lib/test_httplib.c)
+
+set_target_properties(pse_2024_tests PROPERTIES SUFFIX ".out")
