docs: update README

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,10 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build)
 
 add_executable(http_lib_test
         lib/http-lib/httplib.c
-        lib/http-lib/httplib-test.c
         lib/testing/test-lib.c
-        lib/testing/test-lib.h)
+        lib/testing/test-lib.h
+        tests/httplib-test.c)
+
 add_executable(echo_server lib/http-lib/httplib.c echo_server.c)
 
 set_target_properties(http_lib_test PROPERTIES SUFFIX ".out")
