feat: make echo server optional

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,8 +13,8 @@ add_executable(tests
 
 add_executable(server
         lib/http-lib/httplib.c
-        main.c
-        src/basic_http_server/basic_http_server.c)
+        src/basic_http_server/basic_http_server.c
+        main.c)
 
 set_target_properties(tests PROPERTIES SUFFIX ".out")
 set_target_properties(server PROPERTIES SUFFIX ".out")
