refactor: introduce modular structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,17 +7,25 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build)
 
 add_executable(tests
         lib/http-lib/httplib.c
+        src/http_parser/http_parser.c
+        src/http_models/http_models.c
+        src/http_server/http_server.c
         lib/testing/test-lib.c
-        lib/testing/test-lib.h
-        tests/httplib-test.c)
+        tests/http-lib/http-lib_test.c
+        tests/http_parser/http_parser_test.c
+        tests/tests.c)
 
 add_executable(server
         lib/http-lib/httplib.c
+        src/http_models/http_models.c
+        src/http_parser/http_parser.c
         src/http_server/http_server.c
         main.c)
 
 add_executable(server_asan
         lib/http-lib/httplib.c
+        src/http_models/http_models.c
+        src/http_parser/http_parser.c
         src/http_server/http_server.c
         main.c)
 
