--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ add_executable(tests
         src/http_server/http_server.c
         lib/testing/test-lib.c
         tests/http-lib/http-lib_test.c
+        tests/http_models/http_models_test.c
         tests/http_parser/http_parser_test.c
         tests/tests.c)
 
