--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,11 +11,11 @@ add_executable(tests
         src/http_models/http_models.c
         src/http_server/http_server.c
         lib/testing/test-lib.c
-        tests/http-lib/http-lib_test.c
-        tests/http_models/http_models_test.c
-        tests/http_parser/http_parser_test.c
-        tests/http_server/http_server_test.c
-        tests/tests.c)
+        tests/unit/http-lib/http-lib_test.c
+        tests/unit/http_models/http_models_test.c
+        tests/unit/http_parser/http_parser_test.c
+        tests/unit/http_server/http_server_test.c
+        tests/unit/tests.c)
 
 add_executable(server
         lib/http-lib/httplib.c
