--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,8 @@ image: gcc
 
 stages:
   - build
-  - test
+  - unit
+  - http
 
 build-job:
   stage: build
@@ -15,7 +16,7 @@ build-job:
     - echo "Compile complete."
 
 unit-test:
-  stage: test
+  stage: unit
   before_script:
     - apt-get update
     - apt-get install -y cmake
@@ -26,7 +27,7 @@ unit-test:
     - ./build/tests.out
 
 unit-test-job-valgrind:
-  stage: test
+  stage: unit
   before_script:
     - apt-get update
     - apt-get install --yes cmake valgrind
@@ -37,7 +38,7 @@ unit-test-job-valgrind:
     - valgrind --tool=memcheck --gen-suppressions=all --leak-check=full --leak-resolution=med --track-origins=yes --vgdb=no --trace-children=yes --error-exitcode=1 ./build/tests.out --output-on-failure
 
 unit-test-job-asan:
-  stage: test
+  stage: unit
   before_script:
     - apt-get update
     - apt-get install --yes cmake
@@ -47,3 +48,18 @@ unit-test-job-asan:
     - cmake . && make
     - echo "Running tests..."
     - ./build/tests.out --output-on-failure
+
+http-test-job:
+    stage: http
+    before_script:
+        - apt-get update
+        - apt-get install --yes cmake
+        - apt-get install --yes python3
+    script:
+        - echo "Compiling the code..."
+        - cmake . && make
+        - echo "Starting the server..."
+        - ./build/server.out & echo $! > server.pid
+        - sleep 5
+        - echo "Running tests..."
+        - python3 tests/http/tests.py
