--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,21 +15,27 @@ add_executable(tests
         tests/unit/http_models/http_models_test.c
         tests/unit/http_parser/http_parser_test.c
         tests/unit/http_server/http_server_test.c
-        tests/unit/tests.c)
+        tests/unit/tests.c
+        src/http_server/request_validation/request_validation.c
+        src/http_server/request_validation/request_validation.h)
 
 add_executable(server
         lib/http-lib/httplib.c
         src/http_models/http_models.c
         src/http_parser/http_parser.c
         src/http_server/http_server.c
-        main.c)
+        main.c
+        src/http_server/request_validation/request_validation.c
+        src/http_server/request_validation/request_validation.h)
 
 add_executable(server_asan
         lib/http-lib/httplib.c
         src/http_models/http_models.c
         src/http_parser/http_parser.c
         src/http_server/http_server.c
-        main.c)
+        main.c
+        src/http_server/request_validation/request_validation.c
+        src/http_server/request_validation/request_validation.h)
 
 set_target_properties(tests PROPERTIES SUFFIX ".out")
 set_target_properties(server PROPERTIES SUFFIX ".out")
