--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,14 +35,19 @@ unit-test-job-valgrind:
     - echo "Compiling the code..."
     - cmake . && make
     - echo "Running tests..."
-    - valgrind --tool=memcheck --gen-suppressions=all --leak-check=full --leak-resolution=med --track-origins=yes --vgdb=no --trace-children=yes --error-exitcode=1 ./build/tests.out --output-on-failure
+    - >-
+      valgrind --tool=memcheck --gen-suppressions=all --leak-check=full
+      --leak-resolution=med --track-origins=yes --vgdb=no --trace-children=yes
+      --error-exitcode=1 ./build/tests.out --output-on-failure
 
 unit-test-job-asan:
   stage: unit
   before_script:
     - apt-get update
     - apt-get install --yes cmake
-    - echo "set(CMAKE_C_FLAGS \"\${CMAKE_C_FLAGS} -fsanitize=address -g -fno-omit-frame-pointer -O1\")" >> CMakeLists.txt
+    - >-
+      echo "set(CMAKE_C_FLAGS \"\${CMAKE_C_FLAGS} -fsanitize=address -g
+      -fno-omit-frame-pointer -O1\")" >> CMakeLists.txt
   script:
     - echo "Compiling the code..."
     - cmake . && make
@@ -50,16 +55,16 @@ unit-test-job-asan:
     - ./build/tests.out --output-on-failure
 
 http-test-job:
-    stage: http
-    before_script:
-        - apt-get update
-        - apt-get install --yes cmake
-        - apt-get install --yes python3
-    script:
-        - echo "Compiling the code..."
-        - cmake . && make
-        - echo "Starting the server..."
-        - ./build/server.out & echo $! > server.pid
-        - sleep 5
-        - echo "Running tests..."
-        - python3 tests/http/tests.py
+  stage: http
+  before_script:
+    - apt-get update
+    - apt-get install --yes cmake
+    - apt-get install --yes python3
+  script:
+    - echo "Compiling the code..."
+    - cmake . && make
+    - echo "Starting the server..."
+    - ./build/server.out & echo $! > server.pid
+    - sleep 5
+    - echo "Running tests..."
+    - python3 tests/http/tests.py
